images no longer getting stretched / title on hover

--- a/src/index.css
+++ b/src/index.css
@@ -14,61 +14,55 @@ code {
 
 .gallery {
   display: grid;
-  overflow: hidden;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  grid-auto-rows: 1fr;
-  width: 100%;
-  height: auto;
-  padding-right: 10px;
-  padding-left: 10px;
 }
 
-.g-card-image {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  overflow: hidden;
+.container {
   position: relative;
 }
 
-.g-card-image:hover {
-  overflow: hidden;
-  box-shadow: 0px 0px 3px 1px #ccc;
-  filter: brightness(85%);
+.image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.g-card-image:hover .g-card-info {
+.image:hover {
+  box-shadow: 0px 0px 3px 1px #ccc;
+  filter: brightness(80%);
+  z-index: 0;
+}
+
+.overlay {
   position: absolute;
-  object-fit: cover;
-  overflow: hidden;
-  background: rgba(163, 165, 165, 0);
-  visibility: visible;
+  bottom: 0;
+  top: 0;
+  left: 12;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  width: 90%;
+  transition: 0.5s ease;
+  opacity: 0;
+  color: red;
+  font-size: 20px;
+  padding: 20px;
+}
+
+.container:hover .overlay {
+  height: 100%;
+  padding: 10px;
   opacity: 1;
 }
 
-.g-card-info {
-  position: absolute;
-  object-fit: cover;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(216, 219, 221, 0.72);
-  color: #fff;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.2s, visibility 0.2s;
-}
-
-.g-card-title {
+.title {
   font-size: 30px;
   margin: 0px;
-  padding-left: 20px;
   text-align: center;
-  padding-top: 230px;
 }
 
-.g-card-eye {
+.eye {
   font-size: 16px;
-  padding-left: 20px;
-  padding-top: 200px;
+  padding-left: 15px;
 }
